--- a/contact.html
+++ b/contact.html
@@ -3,180 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <link rel=" stylesheet" href="stylesheet.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <title>$Title$</title>
 </head>
 <body>
-<header>
-
-    <div class="logo"><a href="index.html"><img src="/assets/logoPNG_DropShadow.png" alt="logo" class="logo"></a></div>
-
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="game.html">Game</a></li>
-        <li><a href="staff.html">Staff</a></li>
-        <li><a href="store.html">Store</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-    </ul>
-</header>
-<div class="contact-container">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1115.2786129595547!2d175.24438059919905!3d-37.75524144060875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6d22f62b6cca9b%3A0x3708d2d9f3f3ea86!2s668A%20Te%20Rapa%20Road%2C%20Te%20Rapa%2C%20Hamilton%203200!5e0!3m2!1sen!2snz!4v1652134906668!5m2!1sen!2snz" width="1903" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <div class="contact-page">
-        <div class="contact-header">
-            <h1>Contact us</h1>
-            <div>
-                <p>Contact us if you have any questions or problems with our products or staff.</p>
-<!--                 Dont be afraid to come visit us at our physical site shown below or call us through the shown phone number, we wont bite.-->
-            </div>
-        </div>
-        <br>
-        <div class="contact-column">
-            <div class="contact-side">
-                <div class="ContactInfo">
-                    <div class="contact-text">
-                        <h2>Contact Details</h2>
-                        <h3>Phone Number: <a href="tel:+641154283931">(64) 115 428 3931</a><br></h3>
-                        <h3>Physical Address</h3>
-                        <p><a>668A Te Rapa Road,     Te Rapa,<br> Hamilton 3200, <br> New Zealand</a></p>
-                        <br>
-                        <!--                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1115.2786129595547!2d175.24438059919905!3d-37.75524144060875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6d22f62b6cca9b%3A0x3708d2d9f3f3ea86!2s668A%20Te%20Rapa%20Road%2C%20Te%20Rapa%2C%20Hamilton%203200!5e0!3m2!1sen!2snz!4v1652134906668!5m2!1sen!2snz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
-                    </div>
+    <script src="/assets/JavaScript/header.js"></script>
+    <div class="contact-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1115.2786129595547!2d175.24438059919905!3d-37.75524144060875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6d22f62b6cca9b%3A0x3708d2d9f3f3ea86!2s668A%20Te%20Rapa%20Road%2C%20Te%20Rapa%2C%20Hamilton%203200!5e0!3m2!1sen!2snz!4v1652134906668!5m2!1sen!2snz" width="1903" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="contact-page">
+            <div class="contact-header">
+                <h1>Contact us</h1>
+                <div>
+                    <p>Contact us if you have any questions or problems with our products or staff.</p>
+    <!--                 Dont be afraid to come visit us at our physical site shown below or call us through the shown phone number, we wont bite.-->
                 </div>
             </div>
-        </div>
-        <div class="contact-row">
+            <br>
             <div class="contact-column">
-                <!--<p>This is the contact info of our team here at Spaghetti Code</p>-->
-                <!--<div class="StaffContact">-->
-                <!--        <div class="StaffContactText">-->
-                <!--            <address>-->
-                <!--                <h4>Our Lead Games Designer: Larry Rivada</h4><br>-->
-                <!--                <a href="Larry.Rivada@spaghetti.com">Larry.Rivada@spaghetti.com</a><br>-->
-                <!--                <a href="tel:+643115552368">(311) 555-2368</a><br>-->
-                <!--                <a>21 Cross Road, Flagstaff, <br>Hamilton, 3206</a>-->
-                <!--                <div class="StaffContactImages">-->
-                <!--                    <img src="/assets/JeffKaplan.jpg" alt="JeffKaplan" class="StaffContactImages">-->
-                <!--                </div>-->
-                <!--            </address>-->
-                <!--        </div>-->
-                <!--    <br>-->
-                <!--        <div class="StaffContactText">-->
-                <!--            <address>-->
-                <!--                <h4>Our AI Programmer: Paul Allen</h4><br>-->
-                <!--                <a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a><br>-->
-                <!--                <a href="tel:+643116261811">(311) 626-1811</a><br>-->
-                <!--                <a>95 Hillpark Drive, Pokeno, <br>Auckland, 2402</a>-->
-                <!--                <div class="StaffContactImages">-->
-                <!--                    <img src="/assets/DripKaplan.jpg" alt="DripKaplan" class="StaffContactImages">-->
-                <!--                </div>-->
-                <!--            </address>-->
-                <!--        </div>-->
-                <!--    <br>-->
-                <!--        <div class="StaffContactText">-->
-                <!--            <address>-->
-                <!--                <h4>Our Enviroment Artist: Trent Maunsell-Beanland</h4><br>-->
-                <!--                <a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a><br>-->
-                <!--                <a href="tel:+643105434357">(310) 543-4357</a><br>-->
-                <!--                <a>33 Kahikatea Drive, Melville, <br>Hamilton, 3206</a>-->
-                <!--                <div class="StaffContactImages">-->
-                <!--                    <img src="/assets/Gaben.jpg" alt="Gaben" class="StaffContactImages">-->
-                <!--                </div>-->
-                <!--            </address>-->
-                <!--        </div>-->
-                <!--</div>-->
-                <!--<div class="ContactForm">-->
-                <!--    <form action="" name="contactForm" onsubmit="inputCheck();">-->
-                <!--        <h2>Contact Form</h2>-->
-                <!--        <h3>Use this to contact us if you have any questions or problems with our products or staff.</h3><br>-->
-                <!--        <label for="fname">First Name</label>-->
-                <!--        <input type="text" id="fname" name="firstname" placeholder="Your First name...">-->
-
-                <!--        <label for="lname">Last Name</label>-->
-                <!--        <input type="text" id="lname" name="lastname" placeholder="Your Last name...">-->
-
-                <!--        <label for="emailaddress">Email Address</label>-->
-                <!--        <input type="text" id="emailaddress" name="emailaddress" placeholder="Your Email address...">-->
-
-                <!--        <label for="country">Country</label>-->
-                <!--        <select id="country" name="country">-->
-                <!--            <option value="placeholder" disabled selected hidden>Please pick your country from the drop-down menu</option>-->
-                <!--            <option value="new-zealand">New Zealand</option>-->
-                <!--            <option value="australia">Australia</option>-->
-                <!--            <option value="canada">Canada</option>-->
-                <!--            <option value="usa">USA</option>-->
-                <!--            <option value="germany">Germany</option>-->
-                <!--            <option value="uk">UK</option>-->
-                <!--        </select>-->
-
-                <!--        <label for="subject">Subject</label>-->
-                <!--        <textarea id="subject" name="subject" placeholder="Write something..." style="height:200px"></textarea>-->
-                <!--        <div class="button">-->
-                <!--            <input type="submit" value="Submit">-->
-                <!--        </div>-->
-                <!--    </form>-->
-                <!--</div>-->
-                <div class="contact-main">
-                    <div class="wrapper">
-                        <h2>Contact form</h2>
-                        <div id="error_message">
-
+                <div class="contact-side">
+                    <div class="ContactInfo">
+                        <div class="contact-text">
+                            <h2>Contact Details</h2>
+                            <h3>Phone Number: <a href="tel:+641154283931">(64) 115 428 3931</a><br></h3>
+                            <h3>Physical Address</h3>
+                            <p><a>668A Te Rapa Road,     Te Rapa,<br> Hamilton 3200, <br> New Zealand</a></p>
+                            <br>
                         </div>
-                        <form action="" id="contactform" onsubmit = "return validate();">
-                            <div class="input_field">
-                                <input type="text" placeholder="Name" id="name">
+                    </div>
+                </div>
+            </div>
+            <div class="contact-row">
+                <div class="contact-column">
+                    <div class="contact-main">
+                        <div class="wrapper">
+                            <h2>Contact form</h2>
+                            <div id="error_message">
+
                             </div>
-                            <div class="input_field">
-                                <input type="text" placeholder="Phone" id="phone">
-                            </div>
-                            <div class="input_field">
-                                <input type="text" placeholder="Email" id="email">
-                            </div>
-                            <div class="input_field">
-                                <textarea placeholder="Message" id="message"></textarea>
-                            </div>
-                            <div class="btn">
-                                <input type="submit">
-                            </div>
-                        </form>
+                            <form action="" id="contactform" onsubmit = "return validate();">
+                                <div class="input_field">
+                                    <input type="text" placeholder="Name" id="name">
+                                </div>
+                                <div class="input_field">
+                                    <input type="text" placeholder="Phone" id="phone">
+                                </div>
+                                <div class="input_field">
+                                    <input type="text" placeholder="Email" id="email">
+                                </div>
+                                <div class="input_field">
+                                    <textarea placeholder="Message" id="message"></textarea>
+                                </div>
+                                <div class="btn">
+                                    <input type="submit">
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="assets/JavaScript/ContactformValidation.js"></script>
     </div>
-    <script src="assets/ContactformValidation.js"></script>
-</div>
-
-<footer>
-    <!-- footer section -->
-    <div class="footer">
-        <ul>
-            <li><strong><h2>Download our app</h2></strong></li>
-            <li>Download the spaghetti code app to get daily updates with our new events!</li>
-        </ul>
-        <div id="footer-links">
-            <ul>
-                <li>About</li>
-                <li>Game</li>
-                <li>Event</li>
-                <li>Help Us Improve</li>
-                <li>Store</li>
-            </ul>
-        </div>
-        <div id="footer-sign">
-            <ul>
-                <li><img src="/assets/facebook.png"></li>
-                <li><img src="/assets/twitter.png"></li>
-                <li><img src="/assets/instagram.png"></li>
-                <li><img src="/assets/youtube.png"></li>
-            </ul>
-            <img id="img-container" src="/assets/logoPNG.png">
-            <div id="footer-paragraph">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
-                <br />
-                <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>
-            </div>
-        </div>
-    </div>
-</footer>
+    <!--footer-->
+    <script src="/assets/JavaScript/footer.js"></script>
 </body>
 </html>
