--- a/game.html
+++ b/game.html
@@ -3,78 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <link rel=" stylesheet" href="stylesheet.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <title>Games</title>
 </head>
 <body>
-<script src="/assets/JavaScript/header.js"></script>
-
-<!-- Body  -->
-<p>This is the Games page</p>
-
-<section class="game-section game">
-    <div class="image-section">
-        <div class="game-box">
-                <img class="Game-Images" src="/assets/unpacking.jpg" alt="Unpacking Game">
-                <div class="game-detail">
-                <span class="Text-placement">This is the Unpacking Game</span>
-                </div>
-        </div>
-        <div class="game-box">
-            <img class="Game-Images" src="/assets/keywe-key-art.jpg" alt="KeyWe Game">
-            <div class="game-detail">
-                <span class="Text-placement">This is the KeyWe Game</span>
-            </div>
-        </div>
-        <div class="game-box">
-            <img class="Game-Images" src="/assets/snacko.jpg" alt="Snacko Game">
-            <div class="game-detail">
-            <span class="Text-placement">This is the Snacko Game</span>
-            </div>
-        </div>
-        <div class="game-box">
-            <img class="Game-Images" src="/assets/brick-world-thumbnail.jpg" alt="Brick World">
-            <div class="game-detail">
-            <span class="Text-placement">This is the Brick world Game</span>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-
+    <script src="/assets/JavaScript/header.js"></script>
 
     <!-- Body  -->
-<footer>
-    <!-- footer section -->
-    <div class="footer">
-        <ul>
-            <li><strong><h2>Download our app</h2></strong></li>
-            <li>Download the spaghetti code app to get daily updates with our new events!</li>
-        </ul>
-        <div id="footer-links">
-            <ul>
-                <li>About</li>
-                <li>Game</li>
-                <li>Event</li>
-                <li>Help Us Improve</li>
-                <li>Store</li>
-            </ul>
+    <div class="gallery">
+        <div class="img-container">
+            <img
+                    src="/assets/unpacking.jpg"
+                    alt="Unpacking is a zen puzzle game about the familiar experience of pulling possessions out of boxes and fitting them into a new home. Part block-fitting puzzle, part home decoration, you are invited to create a satisfying living space while learning clues about the life you’re unpacking."
+                    data-original="/assets/unpacking.jpg"
+            />
         </div>
-        <div id="footer-sign">
-            <ul>
-                <li><img src="/assets/facebook.png"></li>
-                <li><img src="/assets/twitter.png"></li>
-                <li><img src="/assets/instagram.png"></li>
-                <li><img src="/assets/youtube.png"></li>
-            </ul>
-            <img id="img-container" src="/assets/logoPNG.png">
-            <div id="footer-paragraph">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
-                <br />
-                <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>
-            </div>
+        <div class="img-container">
+            <img
+                    src="/assets/snacko.jpg"
+                    alt="snacko is a zen puzzle game about the familiar experience of pulling possessions out of boxes and fitting them into a new home. Part block-fitting puzzle, part home decoration, you are invited to create a satisfying living space while learning clues about the life you’re unpacking."
+                    data-original="/assets/snacko.jpg"
+            />
         </div>
+        <div class="img-container">
+            <img
+                    src="/assets/brick-world-thumbnail.jpg"
+                    alt="brick is a zen puzzle game about the familiar experience of pulling possessions out of boxes and fitting them into a new home. Part block-fitting puzzle, part home decoration, you are invited to create a satisfying living space while learning clues about the life you’re unpacking."
+                    data-original="/assets/brick-world-thumbnail.jpg"
+            />
+        </div>
+        <div class="img-container">
+            <img
+                    src="/assets/keywe-key-art.jpg"
+                    alt="Unpacking is a zen puzzle game about the familiar experience of pulling possessions out of boxes and fitting them into a new home. Part block-fitting puzzle, part home decoration, you are invited to create a satisfying living space while learning clues about the life you’re unpacking."
+                    data-original="/assets/keywe-key-art.jpg"
+            />
+        </div>
+        <<div class="modal">
+        <img src="" alt="" class="modal-img" />
+        <p class="caption"></p>
     </div>
-</footer>
+    </div>
+
+        <!-- Body  -->
+    <script src="/assets/JavaScript/footer.js"></script>
 </body>
 </html>
