--- a/store.html
+++ b/store.html
@@ -217,38 +217,7 @@
         </div>
     </section>
 
-        <footer>
-            <!-- footer section -->
-            <div class="footer">
-                <ul>
-                    <li><strong><h2>Download our app</h2></strong></li>
-                    <li>Download the spaghetti code app to get daily updates with our new events!</li>
-                </ul>
-                <div id="footer-links">
-                    <ul>
-                        <li>About</li>
-                        <li>Game</li>
-                        <li>Event</li>
-                        <li>Help Us Improve</li>
-                        <li>Store</li>
-                    </ul>
-                </div>
-                <div id="footer-sign">
-                    <ul>
-                        <li><img src="/assets/facebook.png"></li>
-                        <li><img src="/assets/twitter.png"></li>
-                        <li><img src="/assets/instagram.png"></li>
-                        <li><img src="/assets/youtube.png"></li>
-                    </ul>
-                    <img id="img-container" src="/assets/logoPNG.png">
-                    <div id="footer-paragraph">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</p>
-                        <br />
-                        <p> &copy; 2022 Spaghetti Code New Zealand, Inc. All rights reserved.</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
+        <script src="/assets/JavaScript/footer.js"></script>
         <script src="/assets/JavaScript/store.js"></script>
     </body>
 </html>
