Moved the game images again and removed the extra <

--- a/game.html
+++ b/game.html
@@ -39,7 +39,7 @@
                     data-original="/assets/keywe-key-art.jpg"
             />
         </div>
-        <<div class="modal">
+        <div class="modal">
         <img src="" alt="" class="modal-img" />
         <p class="caption"></p>
     </div>
