--- a/staff.html
+++ b/staff.html
@@ -9,13 +9,16 @@
 <body>
     <script src="/assets/JavaScript/header.js"></script>
 
+
+
+
     <!-- Body  -->
     <div class="Staff">
         <div class="topStaff" style="flex-grow: 1; padding: 20px;">
             </br>
             <h1>This is our team here at Spaghetti Code</h1><br>
             <h3>Here at Spaghetti code we design games for you, the fans.<br>
-                Our team knows that no matter what at the end of the day the person who will recieve and ultimately review and enjoy our games are the fans, so thats why we design with you in mind and not other corporate shells who want to try to tamper with games and game dev companies reputations for the possibility of a bigger pay.</h3>
+                Our team knows that no matter what at the end of the day the person who will receive and ultimately review and enjoy our games are the fans, so that's why we design with you in mind and not other corporate shells who want to try to tamper with games and game dev companies reputations for the possibility of a bigger pay.</h3>
             <div class="nav" style="flex-grow: 8; padding: 20px;"></div>
         </div>
     </br>
@@ -50,8 +53,6 @@
                         </br>
     <!--                    <p>Paul.Allen@spaghetti.com</p>-->
                         <p><a href="Paul.Allen@spaghetti.com">Paul.Allen@spaghetti.com</a></p>
-                        <!--                    <p><a href="tel:+643116261811">(311) 626-1811</a><br></p>-->
-                        <!--                    <p><a>95 Hillpark Drive, Pokeno, Auckland, 2402</a></p>-->
                         </br>
                         </br>
                         <p><button class="staffButton">Contact</button></p>
@@ -69,8 +70,6 @@
                         </p>
                         </br>
                         <p><a href="Trent.Maunsell-Beanland@spaghetti.com">Trent.Maunsell-Beanland@spaghetti.com</a></p>
-    <!--                    <p><a href="tel:+643105434357">(310) 543-4357</a><br></p>-->
-    <!--                    <p><a>33 Kahikatea Drive, Melville, Hamilton, 3206</a></p>-->
                         <p></p>
                         <p><button class="staffButton">Contact</button></p>
                     </div>
