Changed contact page to match footer details

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <script src="/assets/JavaScript/header.js"></script>
     <div class="contact-container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1115.2786129595547!2d175.24438059919905!3d-37.75524144060875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6d22f62b6cca9b%3A0x3708d2d9f3f3ea86!2s668A%20Te%20Rapa%20Road%2C%20Te%20Rapa%2C%20Hamilton%203200!5e0!3m2!1sen!2snz!4v1652134906668!5m2!1sen!2snz" width="1903" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src=https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d788.2616812567451!2d175.27931686398273!3d-37.78894473592109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d6d18a57fa16281%3A0x72b05e2e8812d179!2sWaikato%20Institute%20of%20Technology%2C%20City%20Campus!5e0!3m2!1sen!2snz!4v1652321876385!5m2!1sen!2snz" width="1903" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="contact-page">
             <div class="contact-header">
                 <h1>Contact us</h1>
@@ -23,10 +23,9 @@
                     <div class="ContactInfo">
                         <div class="contact-text">
                             <h2>Contact Details</h2>
-                            <h3>Phone Number: <a href="tel:+641154283931">(64) 115 428 3931</a><br></h3>
+                            <h3>Phone Number: <a href="tel:+15555555555">+1 555 555 5555</a><br></h3>
                             <h3>Physical Address</h3>
-                            <p><a>668A Te Rapa Road,     Te Rapa,<br> Hamilton 3200, <br> New Zealand</a></p>
-                            <br>
+                            <p><a>Tristram Street,Whitiora,<br> Hamilton 3200, <br> New Zealand</a></p>
                         </div>
                     </div>
                 </div>
@@ -37,7 +36,6 @@
                         <div class="wrapper">
                             <h2>Contact form</h2>
                             <div id="error_message">
-
                             </div>
                             <form action="" id="contactform" onsubmit = "return validate();">
                                 <div class="input_field">
