Changed up contact page

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:height="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link rel=" stylesheet" href="stylesheet.css">
@@ -15,9 +15,16 @@
                 <h1>Contact us</h1>
                 <div>
                     <p>Contact us if you have any questions or problems with our products or staff.</p>
+                    <br>
+                    <hr style="height:1px;
+                        width: 50%;
+                        text-align:center;
+                        size:2px;
+                        margin: auto;
+                        colour:grey;
+                        background-colour:grey">
                 </div>
             </div>
-            <br>
             <div class="contact-column">
                 <div class="contact-side">
                     <div class="ContactInfo">
@@ -25,7 +32,7 @@
                             <h2>Contact Details</h2>
                             <h3>Phone Number: <a href="tel:+15555555555">+1 555 555 5555</a><br></h3>
                             <h3>Physical Address</h3>
-                            <p><a>Tristram Street,Whitiora,<br> Hamilton 3200, <br> New Zealand</a></p>
+                            <a>Tristram Street,Whitiora,<br> Hamilton 3200, <br> New Zealand</a>
                         </div>
                     </div>
                 </div>
